add db reset endpoint
